.metadata/.plugins/org.eclipse.cdt.ui/3_gpio_input.build.log
22:41:36 **** Incremental Build of configuration Debug for project 3_gpio_input ****
make -j8 all 
arm-none-eabi-gcc "../Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DSTM32 -DSTM32F4 -DSTM32F411RETx -DSTM32F411xE -c -I../Inc -I"D:/STM32CubeIDE/STM32Cube_FW_F4_V1.28.0/CMSIS/Device/ST/STM32F4xx/Include" -I"D:/STM32CubeIDE/STM32Cube_FW_F4_V1.28.0/CMSIS/Include" -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Src/main.o"
../Src/main.c: In function 'uart2_write':
../Src/main.c:30:36: error: expected expression before ')' token
   30 |         while(!(USART2->SR & SR_TXE)) {}
      |                                    ^
../Src/main.c: In function 'main':
../Src/main.c:76:17: warning: implicit declaration of function 'printf' [-Wimplicit-function-declaration]
   76 |                 printf("Hello from stm32");
      |                 ^~~~~~
../Src/main.c:3:1: note: include '<stdio.h>' or provide a declaration of 'printf'
    2 | #include<stm32f4xx.h>
  +++ |+#include <stdio.h>
    3 | #define GPIOAEN (1U<<0)
../Src/main.c:76:17: warning: incompatible implicit declaration of built-in function 'printf' [-Wbuiltin-declaration-mismatch]
   76 |                 printf("Hello from stm32");
      |                 ^~~~~~
../Src/main.c:76:17: note: include '<stdio.h>' or provide a declaration of 'printf'
make: *** [Src/subdir.mk:25: Src/main.o] Error 1
"make -j8 all" terminated with exit code 2. Build might be incomplete.

22:41:36 Build Failed. 2 errors, 2 warnings. (took 825ms)

